
<package format="3">
  <name>keyboard_sim</name>
  <version>0.0.1</version>
  <description>Simple RViz2 simulation with keyboard control</description>
  <maintainer email="ham@example.com">Ham</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
  </export>
</package>
